attempts to fix page media loading flickering with loading animation

--- a/static/platform/base.css
+++ b/static/platform/base.css
@@ -24,6 +24,20 @@ body {
 	background-attachment: fixed;
 }
 
+#transition {
+	position: fixed;
+	inset: 0;
+	z-index: 100;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: black;
+}
+
+#transition.hidden {
+	display: none;
+}
+
 .middleman {
 	flex: 1;
 	display: flex;
